# scwr-vue

./: Cargo.toml  README.md  flake.nix  package.json
.github/workflows/: test.yaml
dnas/scwr/workdir/: dna.yaml
dnas/scwr/zomes/coordinator/scwr/: Cargo.toml
dnas/scwr/zomes/coordinator/scwr/src/: all_instances.rs  executed_instance.rs  lib.rs
dnas/scwr/zomes/integrity/scwr/: Cargo.toml
dnas/scwr/zomes/integrity/scwr/src/: executed_instance.rs  lib.rs
tests/: package.json
tests/src/scwr/scwr/: all-instances.test.ts  common.ts  executed-instance.test.ts
ui/: package.json  vite.config.ts
ui/src/: App.vue
ui/src/scwr/scwr/: AllInstances.vue  CreateExecutedInstance.vue  ExecutedInstanceDetail.vue  types.ts
workdir/: happ.yaml  web-happ.yaml
